--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -1,13 +1,15 @@
 ---
+published: true
 layout: default
 ---
+
 <article>
 	<em>{{ page.date | date: site.date_format }}</em>
 	<div class="lightbox">
 		{{ content }}
 	</div>
 
-	<p>Tags: 
+	<p>Tagged: 
 		{% for tag in page.categories %}
 		<a href="/tags/{{tag}}" rel="tag">{{tag}}</a>&nbsp;
 		{% endfor %}
