--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,10 +11,10 @@ layout: default
 
 	{{ content }}
 
-  {% if page.tags %}
-  <p>Tagged:
-      {% for tag in page.tags %}
-      <a href="/tags/{{tag}}" rel="tag">{{tag}}</a>
+  {% if page.categories %}
+  <p>Posted in:
+      {% for cat in page.categories %}
+   	<a href="/c/{{cat}}/">{{cat}}</a>
       {% endfor %}
   	</p>
   {% endif %}
