--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,41 @@ a small {
   padding:0;
 }
 
+.pager {
+  margin: 20px 0;
+  text-align: center;
+  list-style: none;
+  *zoom: 1;
+}
+.pager li {
+  display: inline;
+}
+.pager li > a,
+.pager li > span {
+  width: auto;
+  font-size: 14px;
+  display: inline-block;
+  padding: 5px 14px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  -webkit-border-radius: 15px;
+     -moz-border-radius: 15px;
+          border-radius: 15px;
+}
+.pager li > a:hover,
+.pager li > a:focus {
+  text-decoration: none;
+  background-color: #f5f5f5;
+}
+.pager .disabled > a,
+.pager .disabled > a:hover,
+.pager .disabled > a:focus,
+.pager .disabled > span {
+  color: #999999;
+  cursor: default;
+  background-color: #fff;
+}
+
 blockquote {
   border-left:1px solid #e5e5e5;
   margin:0;
@@ -215,6 +250,10 @@ footer {
   header ul, header p.view {
     position:static;
   }
+
+  header p.latest {
+    display: none;
+  }  
   
   pre, code {
     word-wrap:normal;
@@ -224,6 +263,9 @@ footer {
 @media print, screen and (max-width: 480px) {
   body {
     padding:15px;
+  }
+  header p.latest {
+    display: none;
   }
 }
 
