--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
 
 body {
-  padding:30px;
+  padding:30px 15px;
   font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size:15px/1.5;
+  font-size:14px;
   color:#333;
   line-height:1.4em; 
 }
@@ -60,7 +60,7 @@ a small {
 }
 
 .wrapper {
-  width:860px;
+  width:960px;
   margin:0 auto;
 }
 
@@ -77,6 +77,7 @@ a small {
 
 .pager {
   margin: 20px 0;
+  padding: 0;
   text-align: center;
   list-style: none;
   *zoom: 1;
@@ -108,6 +109,14 @@ a small {
   color: #999999;
   cursor: default;
   background-color: #fff;
+}
+
+ul.archive {
+    list-style-type: none;
+    padding: 0;
+}
+ul.archive small {
+    margin-right: 10px;
 }
 
 blockquote {
@@ -177,7 +186,7 @@ header ul li + li + li {
 }
 
 section {
-  width:550px;
+  width:700px;
   float:right;
   padding-bottom:50px;
 }
@@ -194,14 +203,6 @@ hr {
   margin:0 0 20px;
 }
 
-ul.archive {
-    list-style-type: none;
-    padding: 0;
-}
-ul.archive small {
-    margin-right: 10px;
-}
-
 footer {
   width:270px;
   float:left;
@@ -209,8 +210,10 @@ footer {
   bottom:50px;
 }
 
-@media print, screen and (max-width: 960px) {
-  
+@media print, screen and (max-width: 1023px) {
+  body {
+    padding: 20px;
+  }
   div.wrapper {
     width:auto;
     margin:0;
@@ -238,9 +241,10 @@ footer {
   }
 }
 
-@media print, screen and (max-width: 720px) {
+@media print, screen and (max-width: 920px) {
   body {
     word-wrap:break-word;
+    padding: 15px;
   }
   
   header {
