--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
 
 body {
-  padding:20px 15px;
+  padding:30px 15px;
   font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size:14px;
   color:#333;
@@ -208,6 +208,12 @@ footer {
   float:left;
   position:fixed;
   bottom:50px;
+}
+
+@media print, screen and (max-width: 1280px) {
+  body {
+    padding-top:15px;
+  }
 }
 
 @media print, screen and (max-width: 1000px) {
